argocd/manifests/echo-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
  namespace: kuadrant-system
  labels:
    app: echo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
      - name: echo-api
        image: quay.io/3scale/echoapi:stable
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
