argocd/manifests/echo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-api
  namespace: kuadrant-system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: echo-api-tls
    route.openshift.io/disable: "true"
  labels:
    app: echo-api
spec:
  selector:
    app: echo-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
